# HPCA_PC_FINAL

./: .gitignore  CMakeLists.txt  GameOfLife  GameOfLife.cpp  UML_ClassDiagram_XML.drawio  World.cpp  World.h  cli.cpp  cli.h  evolve.cl  install_vc-devel.sh
configurations/: biggame.txt  biggame2.txt
include/: OpenCLWrapper.h  World.h  cli.h
src/: GameOfLife.cpp  OpenCLWrapper.cpp  World.cpp  cli.cpp  evolve.cl  evolve_and_compare.cl
